# string-wave-fdm-eigen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/string_wave/: opengl_visualizer.hpp  simulation_observer.hpp  wave_simulation.hpp
main/: main.cpp
src/: opengl_visualizer.cpp  wave_simulation.cpp
tests/: wave_simulation_tests.cpp
